# zr_hi3861_IoT

./: .gitignore  README.md
applications/sample/wifi-iot/app/: BUILD.gn
applications/sample/wifi-iot/app/BMP280/: BUILD.gn  G28u8fttl.c  G28u8fttl.h  bmp280.c
applications/sample/wifi-iot/app/HR_demo/: BUILD.gn  MAX30102.c  MAX30102.h  algorithm.h  blood.c
applications/sample/wifi-iot/app/chapter_01/: led_example.c
applications/sample/wifi-iot/app/chapter_03/: BUILD.gn  beeper_music_demo.c  traffic_light_demo.c
applications/sample/wifi-iot/app/chapter_06/: oled_demo.c  oled_ssd1306.c
applications/sample/wifi-iot/app/chapter_15/: BUILD.gn  wifi_utils.c
applications/sample/wifi-iot/app/chapter_20/: BUILD.gn  blood.c
applications/sample/wifi-iot/app/chapter_24/: BUILD.gn  IR_MeasureTemp.c
applications/sample/wifi-iot/app/demolink/: helloworld.c
applications/sample/wifi-iot/app/func_test/: BUILD.gn  beeper_demo.c  gas_measure.c  gas_measure.h  main.c  mq.h  mqtt_task.c  mqtt_task.h  mqtt_utils.c  oled_task.h  temp_humi_measure.c  temp_humi_measure.h
applications/sample/wifi-iot/app/hr_so_detect/: BUILD.gn
applications/sample/wifi-iot/app/iothardware/: BUILD.gn
applications/sample/wifi-iot/app/module_driver/: BUILD.gn
applications/sample/wifi-iot/app/module_driver/Alcohol/: BUILD.gn  Mix2111d.c  Mix2111d.h
applications/sample/wifi-iot/app/module_driver/BMP280/: BUILD.gn  G28u8fttl.c  G28u8fttl.h  bmp280.c
applications/sample/wifi-iot/app/module_driver/Bluetooth/: BUILD.gn  Bluetooth.c  Bluetooth_bak.c
applications/sample/wifi-iot/app/module_driver/Buzzer/: BUILD.gn  Beep.c  Beep.h
applications/sample/wifi-iot/app/module_driver/CCS811/: BUILD.gn  CCS811-old.c  CCS811.c
applications/sample/wifi-iot/app/module_driver/Gas/: BUILD.gn
applications/sample/wifi-iot/app/module_driver/IR_MeasureTemp/: BUILD.gn  IR_MeasureTemp.c  IR_MeasureTemp.h  Table.c
applications/sample/wifi-iot/app/module_driver/Key/: BUILD.gn  Key.c  Key.h
applications/sample/wifi-iot/app/module_driver/Led/: BUILD.gn  Led.c  Led.h
applications/sample/wifi-iot/app/proj3/: BUILD.gn  aht20_demo.c  oled_demo.c
applications/sample/wifi-iot/app/qr_code/: BUILD.gn  oled_demo.c  ssd1306.c
applications/sample/wifi-iot/app/task5/: BUILD.gn  gas_measure.c  gas_measure.h  mq.c  mq.h  mqtt_utils.c  oled_task.c  temp_humi_measure.c  temp_humi_measure.h
applications/sample/wifi-iot/app/test_hr/: i2c.c  max30102.h  myiic.h  mymain.c  mymain0.c  oled_demo.c
applications/sample/wifi-iot/app/test_hr_not_used/: BUILD.gn  algorithm.c  algorithm.h  max30102.c  myiic.c  oled_fonts.h
applications/sample/wifi-iot/app/th40/: BUILD.gn  fan_task.c  fan_task.h  temp_and_hum_task.c
applications/sample/wifi-iot/app/zr_env_det/: BUILD.gn  control_task.c  gas_measure.c  gas_measure.h  main.c  mqtt_task.c  mqtt_utils.c  oled_task.c  oled_task.h  packet.h  temp_humi_measure.c
applications/sample/wifi-iot/app/zr_env_det/include/msg_queue/: mq.h
applications/sample/wifi-iot/app/zr_env_det/src/msg_queue/: mq.c
applications/sample/wifi-iot/app/zr_env_det_ver2/: BUILD.gn  config.h  control_task.h  mqtt_task.c  mqtt_utils.c  oled_demo.c  oled_task.c  packet.h  temp_humi_measure.h  wifi_utils.h
applications/sample/wifi-iot/app/zr_intel_brec/: BUILD.gn  IR_MeasureTemp.c  IR_MeasureTemp.h  MAX30102.c  Table.h  blood.c  blood.h  config.h  mq.h  mqtt_send_package.h  mqtt_task.c  mqtt_task.h  mqtt_utils.c  oled_task.c  oled_task.h
applications/sample/wifi-iot/app/zr_intel_brec_ver2/: BUILD.gn  blood.h  config.h  main.c  mq.c  mqtt_task.c  mqtt_utils.c  msg_queue.h  oled_task.c  wifi_utils.h
applications/sample/wifi-iot/app/zr_intelligence_brec/: BUILD.gn  main.c  mq.c  mqtt_utils.c  mqtt_utils.h  qr_code_info.txt
applications/sample/wifi-iot/app/zr_intelligence_brec/src/: msg.c  msg.h
applications/sample/wifi-iot/app/zr_intelligence_brec/src/module_tasks/spo2_heart_det/: MAX30102.h  blood.c  blood.h  spo2_heart_det.c  spo2_heart_det.h
applications/sample/wifi-iot/app/zr_intelligence_brec/src/mqtt_io/: mqtt_utils.c  mqtt_utils.h
applications/sample/wifi-iot/app/zr_intelligence_brec/src/msg_queue/: mq.c  mq.h
(+48 files in other folders)
