static_library("chapter_24") 
{
    sources = 
    [
        "IR_MeasureTemp.c",
        "Table.c",
    ]

    include_dirs = 
    [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//vendor/hisi/hi3861/hi3861/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
    ]
}
