static_library("chapter_20") 
{
    sources = 
    [
        "MAX30102.c",
        "algorithm.c",
        "blood.c",
    ]

    include_dirs = 
    [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice"
        # "//third_party/musl/kernel/src/internal",
    ]
}
