static_library("zr_env_det") 
{
    sources = 
    [
        # mqtt modules
        "src/mqtt_io/mqtt_utils.c",
        "src/mqtt_io/wifi_utils.c",

        # message quueue modules
        "src/msg_queue/mq.c",

        
        "main.c",
    ]

    include_dirs = 
    [

        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTPacket/samples",
        "//vendor\hisi\hi3861\hi3861\components\at\src"
    ]
}
